# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = dnschef
description = DNSChef is a highly configurable DNS proxy for Penetration Testers and Malware Analysts.
author = Peter Kacherginsky
author-email = iphelix@gmail.com
license = BSD 3-Clause License
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/iphelix/dnschef
platforms = any
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = True
py_modules = dnschef

# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires =
  pyscaffold>=3.2a0,<3.3a0
  wheel
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires = dnslib>=0.9.10,<=0.10.0

[options.entry_points]
console_scripts =
    dnschef = dnschef:main

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.2.3
package = dnschef
